--- a/index.html
+++ b/index.html
@@ -10,17 +10,17 @@
   <table id="planets">
     <tr>
       <th></th>
-      <th>Planet 1</th>
-      <th>Planet 2</th>
-      <th>Planet 3</th>
-      <th>Planet 4</th>
+      <th>Earth</th>
+      <th>Mars</th>
+      <th>Jupiter</th>
+      <th>Uranus</th>
     </tr>
     <tr>
-      <td>Images of ??</td>
-      <td><img src="images/planet_1.png" alt="?"></td>
-      <td><img src="images/planet_2.png" alt="?"></td>
-      <td><img src="images/planet_3.png" alt="?"></td>
-      <td><img src="images/planet_4.png" alt="?"></td>
+      <td>Images</td>
+      <td><img src="https://www.popsci.com/uploads/2019/01/07/WFJCIFXOJ5R47SXYBRDKUFN3AA-1024x1024.jpg?auto=webp" alt="Planet Earth Visual"></td>
+      <td><img src="https://images.alphacoders.com/540/540072.jpg" alt="Recent Mars Visual"></td>
+      <td><img src="https://t3.ftcdn.net/jpg/04/19/44/22/240_F_419442221_iNRDcgXbeY1tTDRUsQzC6mrbt0YffMQE.jpg" alt="Recent Jupiter Visual"></td>
+      <td><img src="https://media.istockphoto.com/id/1199283538/photo/planet-uranus.jpg?s=612x612&w=0&k=20&c=ywhCXwqp1G17DDGvSN4FoFHcBr24W__TjulMRju4ZWk=" alt="Recent Uranus Visual"></td>
     </tr>
     <tr>
       <td>Fact #1</td>
@@ -73,3 +73,4 @@
     </tr>
   </table>
 </body>
+</html>
