--- a/index.html
+++ b/index.html
@@ -8,19 +8,19 @@
 <body>
   <h1>Planetary Fact Sheet</h1>
   <table id="planets">
-    <tr>
+    <tr class="headers">
       <th></th>
-      <th>Planet 1</th>
-      <th>Planet 2</th>
-      <th>Planet 3</th>
-      <th>Planet 4</th>
+      <th>Earth</th>
+      <th>Mars</th>
+      <th>Jupiter</th>
+      <th>Uranus</th>
     </tr>
     <tr>
-      <td>Images of ??</td>
-      <td><img src="images/planet_1.png" alt="?"></td>
-      <td><img src="images/planet_2.png" alt="?"></td>
-      <td><img src="images/planet_3.png" alt="?"></td>
-      <td><img src="images/planet_4.png" alt="?"></td>
+      <td>Telescope Images</td>
+      <td><img src="" alt="Earth from ISS"></td>
+      <td><img src="" alt="Mars from Telescope"></td>
+      <td><img src="" alt="Jupiter from Telescope"></td>
+      <td><img src="" alt="Uranus from Telescope"></td>
     </tr>
     <tr>
       <td>Fact #1</td>
