--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h1>Planetary Fact Sheet</h1>
-  <table id="planets">
+  <table id="Planets">
     <tr class="headers">
       <th></th>
       <th>Earth</th>
