--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
 <body>
   <h1>Planetary Fact Sheet</h1>
   <table id="Planets">
-    <tr class="headers">
+    <tr>
       <th></th>
-      <th>Earth</th>
-      <th>Mars</th>
-      <th>Jupiter</th>
-      <th>Uranus</th>
+      <th class="Earth">Earth</th>
+      <th class="Mars">Mars</th>
+      <th class="Jupiter">Jupiter</th>
+      <th class="Uranus">Uranus</th>
     </tr>
     <tr>
       <td>Telescope Images</td>
@@ -23,53 +23,53 @@
       <td><img src="" alt="Uranus from Telescope"></td>
     </tr>
     <tr>
-      <td>Fact #1</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Mass (10^24 kg)</td>
+      <td>5.97</td>
+      <td>.642</td>
+      <td>1898</td>
+      <td>86.8</td>
     </tr>
     <tr>
-      <td>Fact #2</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Diameter (km)</td>
+      <td>12,756</td>
+      <td>6792</td>
+      <td>142,984</td>
+      <td>51,118</td>
     </tr>
     <tr>
-      <td>Fact #3</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Density</td>
+      <td>5514</td>
+      <td>3934</td>
+      <td>1326</td>
+      <td>1270</td>
     </tr>
     <tr>
-      <td>Fact #4</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Gravity (m/s^2)</td>
+      <td>9.8</td>
+      <td>3.7</td>
+      <td>23.1</td>
+      <td>8.7</td>
     </tr>
     <tr>
-      <td>Fact #5</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Escape Velocity (km/s)</td>
+      <td>11.2</td>
+      <td>5.0</td>
+      <td>59.5</td>
+      <td>21.3</td>
     </tr>
     <tr>
-      <td>Fact #6</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Rotation Period (hours)</td>
+      <td>23.9</td>
+      <td>24.7</td>
+      <td>9.9</td>
+      <td>-17.2</td>
     </tr>
     <tr>
-      <td>Fact #7</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
-      <td>???</td>
+      <td>Length of Day</td>
+      <td>23.9</td>
+      <td>24.7</td>
+      <td>9.9</td>
+      <td>17.2</td>
     </tr>
   </table>
 </body>
