--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <td>Mass (10^24 kg)</td>
       <td>5.97</td>
       <td>.642</td>
-      <td>1898</td>
+      <td class="Jupiter-Mass">1898</td>
       <td>86.8</td>
     </tr>
     <tr>
