--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
       <td>Diameter (km)</td>
       <td>12,756</td>
       <td>6792</td>
-      <td>142,984</td>
+      <td class="Jupiter-Diameter">142,984</td>
       <td>51,118</td>
     </tr>
     <tr>
       <td>Density</td>
-      <td>5514</td>
+      <td class="Earth-Density">5514</td>
       <td>3934</td>
       <td>1326</td>
       <td>1270</td>
@@ -47,27 +47,27 @@
       <td>Gravity (m/s^2)</td>
       <td>9.8</td>
       <td>3.7</td>
-      <td>23.1</td>
+      <td class="Jupiter-Gravity">23.1</td>
       <td>8.7</td>
     </tr>
     <tr>
       <td>Escape Velocity (km/s)</td>
       <td>11.2</td>
       <td>5.0</td>
-      <td>59.5</td>
+      <td class="Jupiter-EV">59.5</td>
       <td>21.3</td>
     </tr>
     <tr>
       <td>Rotation Period (hours)</td>
       <td>23.9</td>
-      <td>24.7</td>
+      <td class="Mars-RP">24.7</td>
       <td>9.9</td>
       <td>-17.2</td>
     </tr>
     <tr>
       <td>Length of Day</td>
       <td>23.9</td>
-      <td>24.7</td>
+      <td class="Mars-Day">24.7</td>
       <td>9.9</td>
       <td>17.2</td>
     </tr>
