--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </tr>
     <tr>
       <td>Telescope Images</td>
-      <td class="EarthPic"><img src="caribbean-from-space-station-NASAISSPHOTOS0121-7987207d34d946fa82b66568fcebafbf.webp" alt="Earth from ISS"></td>
+      <td class="EarthPic"><img src="https://caribbean-from-space-station-NASAISSPHOTOS0121-7987207d34d946fa82b66568fcebafbf.webp" alt="Earth from ISS"></td>
       <td class="MarsPic"><img src="hero-image.fill.size_994x559.v1678673249.jpg" alt="Mars from Telescope"></td>
       <td class="JupiterPic"><img src="JWST_2022-07-27_Jupiter-1200x1138.png" alt="Jupiter from Telescope"></td>
       <td class="UranusPic"><img src="STScI-01GWQD7A9PKX6A8M932DSQT6G5.png" alt="Uranus from Telescope"></td>
