Changed Image link

--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
     </tr>
     <tr>
       <td>Telescope Images</td>
-      <td><img src="/Telescope-Images/Earth.webp" alt="Earth from ISS"></td>
-      <td><img src="/Telescope-Images/Mars.jpg" alt="Mars from Telescope"></td>
+      <td><img src="Images/Earth.webp" alt="Earth from ISS"></td>
+      <td><img src="Images/Mars.jpg" alt="Mars from Telescope"></td>
       <td><img src="Jupiter.png" alt="Jupiter from Telescope"></td>
       <td><img src="Uranus.png" alt="Uranus from Telescope"></td>
     </tr>
