--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <td>Telescope Images</td>
       <td><img src="Images/Earth.webp" alt="Earth from ISS"></td>
       <td><img src="Images/Mars.jpg" alt="Mars from Telescope"></td>
-      <td><img src="Jupiter.png" alt="Jupiter from Telescope"></td>
-      <td><img src="Uranus.png" alt="Uranus from Telescope"></td>
+      <td><img src="Images/Jupiter.png" alt="Jupiter from Telescope"></td>
+      <td><img src="Images/Uranus.png" alt="Uranus from Telescope"></td>
     </tr>
     <tr>
       <td>Mass (10^24 kg)</td>
