Changing color of earht heading

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <table id="Planets">
     <tr>
       <th></th>
-      <th class="Earth">Earth</th>
+      <th>Earth</th>
       <th class="Mars">Mars</th>
       <th class="Jupiter">Jupiter</th>
       <th class="Uranus">Uranus</th>
